--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -1,13 +1,31 @@
 @import '../variables.css';
 
-.modal-menu{
+.modal{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(37, 43, 70, 0.8);
+    background-color: rgba(37, 43, 70, 0.9);
+    z-index: 10;
+}
+
+.modal__menu{
+    display: flex;
+    flex-direction: column;
+    width: 278px;
+    height: 35%;
+    position: relative;
+    top: 105px;
+}
+
+.modal__icons{
+    display: flex;
+    gap: 40px;
+    margin-bottom: 3rem;
+    align-items: baseline;
 }
