--- a/src/Button/Button.css
+++ b/src/Button/Button.css
@@ -2,6 +2,7 @@
 
 .button{
     font-weight: 500;
+    cursor: pointer;
 }
 
 .button--transparent{
@@ -10,18 +11,44 @@
     outline: none;
 }
 
+
 .button--red{
     background-color: var(--primary-soft-red);
     color: #fff;
+    transition: all .6s ease;
+}
+
+.button--red:hover{
+    outline: 1px solid var(--primary-soft-red);
+    background-color: #fff;
+    color: var(--primary-soft-red);
 }
 
 .button--blue{
     background-color: var(--primary-soft-blue);
     color: #fff;
+    transition: all .6s ease;
+}
+
+.button--blue:hover{
+    outline: 1px solid var(--primary-soft-blue);
+    background-color: #fff;
+    color: var(--primary-soft-blue);
 }
 
 .button--white{
     background-color: #fdf6f6;
+}
+
+/*menu*/
+
+.button--menu a{
+    color: var(--neutral-dark-blue);
+    transition: all .6s ease;
+}
+
+.button--menu a:hover, .button--footer a:hover{
+    color: var(--primary-soft-red);
 }
 
 /*MODAL MENU BUTTONS*/
@@ -52,9 +79,9 @@
 /*BUTTONS BOX TYPE*/
 
 .button--box{
-    padding: 1rem;
+    padding: 1rem 1rem;
     border: 0;
-    border-radius: 8px;
+    border-radius: 5px;
     box-shadow: 0px 10px 19px -6px rgba(0,0,0,0.28);
     flex-grow: 1;
 }
@@ -105,8 +132,33 @@
 
 /*footer*/
 
-.button--footer{
-    color: #fff;
+.button--footer a{
     font-weight: 100;
     letter-spacing: 1px;
+    transition: all .6s ease;
+}
+
+@media (min-width:700px) {
+    .intro__buttons{
+        padding-left: 8rem;
+        width: 60%;
+    }
+
+    .button--feature{
+        flex-basis: 0;
+        flex-grow: 1;
+        border-top: 0;
+        border-bottom: 1px solid var(--neutral-blue);
+        padding: 1rem 2rem;
+    }
+
+    .button--feature--selected::after{
+        width: 205px;
+        top: 64px;
+        left: 0%;
+    }
+
+    .form .button--box{
+        flex-grow: unset;
+    }
 }
