--- a/src/Faq/Faq.css
+++ b/src/Faq/Faq.css
@@ -5,11 +5,9 @@
     padding-bottom: 1rem;
     border-bottom: 1px solid var(--neutral-blue);
     font-size: 15px;
+    cursor: pointer;
 }
 
-.open{
-
-}
 
 .faq .faq-question{
     position: relative;
@@ -60,3 +58,10 @@
     filter: invert(58%) sepia(80%) saturate(3991%) hue-rotate(328deg) brightness(96%) contrast(105%);
 }
 
+@media (min-width:700px) {
+    .faq:first-child{
+        padding-top: 1rem;
+        border-top: 1px solid var(--neutral-blue);
+    }
+
+}
