--- a/src/Modal/Modal.css
+++ b/src/Modal/Modal.css
@@ -14,6 +14,14 @@
     z-index: 10;
 }
 
+.modal__top{
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    padding: 2.4rem;
+    width: 79%;
+}
+
 .modal__menu{
     display: flex;
     flex-direction: column;
