--- a/src/Title/Title.css
+++ b/src/Title/Title.css
@@ -33,3 +33,22 @@
     margin-block-start: 1.83em;
     margin-block-end: 0;
 }
+
+@media (min-width: 700px) {
+    .intro__content .title{
+        text-align: left;
+        padding-left: 8rem;
+        font-size: 33px;
+    }
+
+    .feature__text .title{
+        text-align: left;
+        padding-left: 0;
+        font-size: 30px;
+    }
+
+    .title--form{
+        font-size: 30px;
+    }
+
+}
